# Support_Agent

./: README.md  gradio_app.py  main.py  pyproject.toml
data/: business_profile.json  knowledge.json
data/conversations/: 7032dec7-cefb-4f35-95eb-bdf05f6cb3d5.json  7319f1ef-0e22-40c4-b758-c4a07fab1d19.json  ID_1.json  aefc5fa6-331e-4f52-93ea-241edee09fda.json  b901f9f4-d5d2-4c39-bcfe-536dde808486.json  manual-stream-1.json  manual-test-1.json
data/policies/: Cancellation & Refund Policy.docx  Cookie Policy.docx  Privacy Policy.docx  Provider Agreement.docx  Terms and Conditions.docx
data/retrieval/: vector_store.json
src/app/: main.py
src/app/api/routes/: chat.py  health.py
src/app/api/schemas/: __init__.py  chat.py
src/app/core/: config.py  dependencies.py
src/app/domain/support/: guardrails.py  models.py  observability.py  policies.py  prompt_builder.py  retrieval.py  router.py  service.py
src/app/infrastructure/content/: business_profile_loader.py  knowledge_loader.py
src/app/infrastructure/llm/: openai_client.py
src/app/infrastructure/retrieval/: __init__.py  embedding.py  indexer.py  retriever.py  vector_store.py
src/app/infrastructure/storage/: conversation_store.py  file_conversation_store.py
tests/: test_chat_routes.py  test_content_loaders.py  test_conversation_storage.py  test_openai_client.py  test_prompt_builder.py  test_retrieval_pipeline.py  test_support_guardrails.py  test_support_policies.py  test_support_retrieval.py  test_support_router.py  test_support_service.py
