[project]
name = "support-beauty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "openai>=2.31.0",
    "pydantic",
    "pydantic-settings",
    "pytest>=9.0.3",
    "uvicorn",
]

[tool.pytest.ini_options]
pythonpath = ["."]
